fixed footer layout issue

--- a/Sites/boa.hodesiq.com/homepage-redesign/styles/boaMain2.css
+++ b/Sites/boa.hodesiq.com/homepage-redesign/styles/boaMain2.css
@@ -215,7 +215,7 @@ img{border:0;}
 	background:url(../images/bg-footer-w1.png) top left repeat-x;
 	top:-42px;}
 
-#footer div.footer-contents{position:relative; width:978px; top:20px; height:80px; margin-left:auto; margin-right:auto;}	
+#footer div.footer-contents{position:relative; top:20px; height:80px; margin-left:auto; margin-right:auto;}	
 	
 /*p{font-family:Arial, Helvetica, sans-serif; font-size:11px; font-weight:normal; color:#696661; line-height:14px;}*/
 
@@ -264,7 +264,7 @@ img{border:0;}
 #footerNavMidLeft ul li a{text-decoration: none; border:0;}
 #footerNavTop ul li a:hover{text-decoration: none; border:0; text-decoration:underline;}
 #footerNavMidRight{position:relative; float:right; width:383px;  height:30px;}	
-#footerNavMidRight p{text-align:right; font-family:Verdana; font-size:10px; line-height:12px; font-weight:normal; color:#c4c4c4; margin-right:10px;}
+#footerNavMidRight p{text-align:right; font-family:Verdana; font-size:10px; line-height:12px; font-weight:normal; color:#c4c4c4;}
 
 #footerNavMidRight p a{text-decoration:none; color:#c4c4c4;}
 #footerNavMidRight p a:hover{text-decoration:underline;}
